Добавляет ссылку на файл editroconfig

--- a/javascript.html
+++ b/javascript.html
@@ -44,7 +44,7 @@
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3 id="">Отступы, пробелы и переносы</h3>
 
-            <blockquote>Для правильного форматирования используйте файл .editorconfig в&nbsp;вашем редакторе.</blockquote>
+            <blockquote>Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</blockquote>
 
             <p>Для отступов используются два пробела. Знак табуляции не используется.</p>
 
