--- a/javascript.html
+++ b/javascript.html
@@ -82,23 +82,34 @@ var longerName = 2;
 
             <p>После запятой всегда должен ставиться пробел, если запятая не в конце строки</p>
 
-            <p>Запрещено переносить запятую на новую строку при создании множественных переменных через один var, при объявлении массивов и объектов. Запрещено использовать запятую в конце списков, объектов или наоборов параметров функции</p>
+            <p>Запрещено переносить запятую на новую строку при объявлении массивов и объектов. Запрещено использовать запятую в конце списков, объектов или перечислений параметров функции</p>
 
             <p>Файл должен заканчиваться пустой строкой</p>
 
             <p>Строка не должна заканчиваться пробелами</p>
 
-            <p>В однострочных объектах и при деструктуризации фигурные скобки отбиваются пробелами с двух сторон</p>
+            <p>В однострочных объектах и при деструктуризации фигурные скобки не отделяются пробелами от содержимого</p>
+<pre class="language-js language-incorrect"><code>var foo = { a: 1 };
+</code></pre>
+
+<pre class="language-js language-correct"><code>var foo = {a: 1};
+</code></pre>
+
+<pre class="language-js language-iccorrect"><code>const { a, b } = someObject;
+</code></pre>
+
+<pre class="language-js language-correct"><code>const {a, b} = someObject;
+</code></pre>
 
             <p>В коде не используются совместно табы и пробелы</p>
 
-            <p>Блоки кода отделяются друг от друга не более чем двумя пустыми строками</p>
+            <p>Смысловые блоки кода отделяются друг от друга не более чем двумя пустыми строками</p>
 
             <p>В качестве символа переноса строки используется стандартный символ, который используется в системе</p>
 
             <p>При объявлении вычисляемых ключей в объектах с помощью синтаксиса ES2016 в квадратных скобках не используются пробелы</p>
 
-            <p>Оператор вызова функции <code>()</code> не отделяется круглыми скобками от названия функции</p>
+            <p>Оператор вызова функции <code>()</code> не отделяется пробелами от названия функции</p>
 
             <p>В объектах после объявления ключа не ставится пробел. После двоеточия, которое отделяет в объектах ключ от значения может стоять только один пробел, выравнивать несколько значений при объявлении многострочного объекта запрещено</p>
 
@@ -106,7 +117,7 @@ var longerName = 2;
 
             <p>В блоках кода первая и последняя строка не должны быть пустыми (код не отбивается от начала блока кода)</p>
 
-            <p>После двоеточий и точек с запятым ставятся пробелы. Перед ними — не ставятся</p>
+            <p>После двоеточий и точек с запятыми ставятся пробелы. Перед ними — не ставятся</p>
 
             <p>Перед скобками начинающими новый блок кода должен ставиться пробел</p>
 
@@ -114,7 +125,7 @@ var longerName = 2;
 
             <p>В комментариях текст отбивается пробелом от начала комментария</p>
 
-            <p>При создании генераторов, звездочка идет сразу после ключевого слова <code>function</code> без пробелов</p>
+            <p>При создании генераторов, звездочка идёт сразу после ключевого слова <code>function</code> без пробелов</p>
 
             <p>В spread-операторе точки не отделяются от названия коллекции</p>
 
@@ -222,10 +233,10 @@ var longerName = 2;
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3 id="">Условные операторы</h3>
             <p>Запрещена «проверка Йоды» — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоброт.
-<pre class="language-js language-incorrect"><code>if (1 === myValue) {}
+<pre class="language-js language-incorrect"><code>if (1 === myValue) { /*...*/ }
 </code></pre>
 
-<pre class="language-js language-correct"><code>if (myValue === 1) {}
+<pre class="language-js language-correct"><code>if (myValue === 1) { /*...*/ }
 </code></pre></p>
 
             <p>При сравнении двух значений используется оператор строгого сравнения вместо оператора нестрогого сравнения</p>
@@ -247,7 +258,7 @@ var longerName = 2;
             <h3 id="">Функции</h3>
             <p>Если в функции используется ветвление, в котором есть возврат значения (<code>return</code>), <code>return</code> должен быть добавлен и в остальных ветках.</p>
 
-<pre class="language-js language-incorrect"><code>var do = function() {
+<pre class="language-js language-incorrect"><code>var doThings = function() {
   if (cond) {
     return 1;
   } else {
@@ -256,7 +267,7 @@ var longerName = 2;
 };
 </code></pre>
 
-<pre class="language-js language-correct"><code>var do = function() {
+<pre class="language-js language-correct"><code>var doThings = function() {
   if (cond) {
     return 1;
   } else {
@@ -285,7 +296,7 @@ var longerName = 2;
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3 id="">Объявление переменных и функций</h3>
-            <p>При объявлении переменных предпочтение отдается ключевым словам <code>let</code> и <code>const</code>. Переменные объявляются через <code>var</code> только при наличии проблем с поддержкой кода</p>
+            <p>При объявлении переменных предпочтение отдается ключевым словам <code>let</code> и <code>const</code>. Переменные объявляются через <code>var</code> только при наличии проблем с поддержкой ES6</p>
 
             <p>Запрещено переопределять с помощью ключевого слова ранее созданные переменные</p>
 
@@ -433,7 +444,7 @@ myFunc = 2;
 
             <p>В коде нет объявленных, но неиспользуемых переменных</p>
 
-            <p>В коде нет выражений, значения которых не записываются в переменные, параметры функций, свойства объектов и не передаются как параметры функций
+            <p>В коде нет выражений, значения которых не записываются в переменные, параметры функций или свойства объектов и не передаются как параметры функций
 
 <pre class="language-js language-incorrect"><code>check === true && doSomething();
 </code></pre>
@@ -503,7 +514,7 @@ var obj = Object.create(Parent.prototype);
 </code></pre>
             </p>
 
-            <p>В коде не используются лейблы. Лейблы используются с конструкциями <code>break</code> и <code>continue</code> для направленного выхода из икла и могут привести к слишком сложному для понимания коду</p>
+            <p>В коде не используются лейблы. Лейблы используются с конструкциями <code>break</code> и <code>continue</code> для направленного выхода из цикла и могут привести к слишком сложному для понимания коду</p>
 
             <p>Блоки, использующиеся в коде должны описывать тело функции, условия, оператора <code>switch</code> и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использваться сами по себе, любой блок должен быть частью другого выражения</p>
 
