Вносит исправления согласно код-ревью

--- a/javascript.html
+++ b/javascript.html
@@ -42,9 +42,9 @@
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Отступы, пробелы и переносы</h3>
+            <h3 id="">Отступы, пробелы и переносы</h3>
 
-            <blockquote>Для правильного форматирования используйте файл .editorconfig в&nbsp;вашем редакторе.</blockquote>
+            <blockquote>Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</blockquote>
 
             <p>Для отступов используются два пробела. Знак табуляции не используется.</p>
 
@@ -82,23 +82,34 @@ var longerName = 2;
 
             <p>После запятой всегда должен ставиться пробел, если запятая не в конце строки</p>
 
-            <p>Запрещено переносить запятую на новую строку при создании множественных переменных через один var, при объявлении массивов и объектов. Запрещено использовать запятую в конце списков, объектов или наоборов параметров функции</p>
+            <p>Запрещено переносить запятую на новую строку при объявлении массивов и объектов. Запрещено использовать запятую в конце списков, объектов или перечислений параметров функции</p>
 
             <p>Файл должен заканчиваться пустой строкой</p>
 
             <p>Строка не должна заканчиваться пробелами</p>
 
-            <p>В однострочных объектах и при деструктуризации фигурные скобки отбиваются пробелами с двух сторон</p>
+            <p>В однострочных объектах и при деструктуризации фигурные скобки не отделяются пробелами от содержимого</p>
+<pre class="language-js language-incorrect"><code>var foo = { a: 1 };
+</code></pre>
+
+<pre class="language-js language-correct"><code>var foo = {a: 1};
+</code></pre>
+
+<pre class="language-js language-iccorrect"><code>const { a, b } = someObject;
+</code></pre>
+
+<pre class="language-js language-correct"><code>const {a, b} = someObject;
+</code></pre>
 
             <p>В коде не используются совместно табы и пробелы</p>
 
-            <p>Блоки кода отделяются друг от друга не более чем двумя пустыми строками</p>
+            <p>Смысловые блоки кода отделяются друг от друга не более чем двумя пустыми строками</p>
 
             <p>В качестве символа переноса строки используется стандартный символ, который используется в системе</p>
 
             <p>При объявлении вычисляемых ключей в объектах с помощью синтаксиса ES2016 в квадратных скобках не используются пробелы</p>
 
-            <p>Оператор вызова функции <code>()</code> не отделяется круглыми скобками от названия функции</p>
+            <p>Оператор вызова функции <code>()</code> не отделяется пробелами от названия функции</p>
 
             <p>В объектах после объявления ключа не ставится пробел. После двоеточия, которое отделяет в объектах ключ от значения может стоять только один пробел, выравнивать несколько значений при объявлении многострочного объекта запрещено</p>
 
@@ -106,7 +117,7 @@ var longerName = 2;
 
             <p>В блоках кода первая и последняя строка не должны быть пустыми (код не отбивается от начала блока кода)</p>
 
-            <p>После двоеточий и точек с запятым ставятся пробелы. Перед ними — не ставятся</p>
+            <p>После двоеточий и точек с запятыми ставятся пробелы. Перед ними — не ставятся</p>
 
             <p>Перед скобками начинающими новый блок кода должен ставиться пробел</p>
 
@@ -114,7 +125,7 @@ var longerName = 2;
 
             <p>В комментариях текст отбивается пробелом от начала комментария</p>
 
-            <p>При создании генераторов, звездочка идет сразу после ключевого слова <code>function</code> без пробелов</p>
+            <p>При создании генераторов, звездочка идёт сразу после ключевого слова <code>function</code> без пробелов</p>
 
             <p>В spread-операторе точки не отделяются от названия коллекции</p>
 
@@ -124,7 +135,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Строки</h3>
+            <h3 id="">Строки</h3>
             <p>В строках, объявленных с помощью одинарных и двойных кавычек запрещено использовать переносы</p>
 
             <p>В строках запрещено указывать код спецсимволов в восьмеричной системе счисления
@@ -143,7 +154,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Числа</h3>
+            <h3 id="">Числа</h3>
             <p>В числах запрещено опускать ноль в дробной и целой части</p>
 
             <p>Запрещено использовать ведущий ноль при создании чисел, поскольку это приводит к созданию числа в восьмеричной системе счисления</p>
@@ -152,7 +163,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Литералы</h3>
+            <h3 id="">Литералы</h3>
             <p>Массивы должны создаваться через литерал массива, а не через конструктор. Допустимое исключение — создание массива определенной длины</p>
 
             <p>Объекты должны создаваться через литерал объекта, а не через конструктор</p>
@@ -167,7 +178,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Операторы</h3>
+            <h3 id="">Операторы</h3>
             <p>В бинарных и тернарных операторах операнды и символы оператора отделяются пробелами</p>
 
             <p>Унарные операторы не отделяются от операнда пробелом. Исключения составляют операторы, состоящие из слов, а не символов, например оператор <code>typeof</code></p>
@@ -220,12 +231,12 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Условные операторы</h3>
+            <h3 id="">Условные операторы</h3>
             <p>Запрещена «проверка Йоды» — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоброт.
-<pre class="language-js language-incorrect"><code>if (1 === myValue) {}
+<pre class="language-js language-incorrect"><code>if (1 === myValue) { /*...*/ }
 </code></pre>
 
-<pre class="language-js language-correct"><code>if (myValue === 1) {}
+<pre class="language-js language-correct"><code>if (myValue === 1) { /*...*/ }
 </code></pre></p>
 
             <p>При сравнении двух значений используется оператор строгого сравнения вместо оператора нестрогого сравнения</p>
@@ -244,10 +255,10 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Функции</h3>
+            <h3 id="">Функции</h3>
             <p>Если в функции используется ветвление, в котором есть возврат значения (<code>return</code>), <code>return</code> должен быть добавлен и в остальных ветках.</p>
 
-<pre class="language-js language-incorrect"><code>var do = function() {
+<pre class="language-js language-incorrect"><code>var doThings = function() {
   if (cond) {
     return 1;
   } else {
@@ -256,7 +267,7 @@ var longerName = 2;
 };
 </code></pre>
 
-<pre class="language-js language-correct"><code>var do = function() {
+<pre class="language-js language-correct"><code>var doThings = function() {
   if (cond) {
     return 1;
   } else {
@@ -275,7 +286,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Операторы</h3>
+            <h3 id="">Операторы</h3>
             <p>В конструкторе классов-наследников обязательно вызывается <code>super()</code></p>
 
             <p>В конструкторе нет обращения к <code>this</code> до того, как будет вызван <code>super()</code></p>
@@ -284,8 +295,8 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Объявление переменных и функций</h3>
-            <p>При объявлении переменных предпочтение отдается ключевым словам <code>let</code> и <code>const</code>. Переменные объявляются через <code>var</code> только при наличии проблем с поддержкой кода</p>
+            <h3 id="">Объявление переменных и функций</h3>
+            <p>При объявлении переменных предпочтение отдается ключевым словам <code>let</code> и <code>const</code>. Переменные объявляются через <code>var</code> только при наличии проблем с поддержкой ES6</p>
 
             <p>Запрещено переопределять с помощью ключевого слова ранее созданные переменные</p>
 
@@ -298,7 +309,7 @@ var b = 2;
 </code></pre>
             </p>
 
-            <h4>Объявление функций</h4>
+            <h4 id="">Объявление функций</h4>
             <p>Запрещено переопределение функций, созданных с помощью функционального объявления (function declaration)
 <pre class="language-js language-incorrect"><code>function myFunc() {};
 myFunc = 2;
@@ -319,7 +330,7 @@ myFunc = 2;
 </code></pre>
             </p>
 
-            <h4>Создание значений</h4>
+            <h4 id="">Создание значений</h4>
             <p>Не вызываются служебные конструкторы, создающие объекты из глобальной области видимости <code>Math()</code>, <code>JSON()</code>, <code>Reflect()</code></p>
 
             <p>При создании непустых массивов запрещено опускать пустые значения (ставить подряд несколько запятых)</p>
@@ -336,7 +347,7 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Хорошие практики</h3>
+            <h3 id="">Хорошие практики</h3>
             <p>Не используется конструкция <code>with</code></p>
 
             <p>Не используются <code>alert</code></p>
@@ -369,7 +380,7 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Приведение типов</h3>
+            <h3 id="">Приведение типов</h3>
             <p>Не используется лишнее приведение к Boolean. Например, нет большого смысла переводить в boolean условия в конструкциях <code>if</code>, <code>while</code>, <code>for</code>, в первом операнде тернарного оператора</p>
 
             <p>Оператор <code>typeof</code> используется корректно — используются только правильные значения, возвращаемые оператором, не производится сравнения со строковыми литералами, которые содержат некорректные значения <code>typeof</code></p>
@@ -401,14 +412,14 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Лишние символы</h3>
+            <h3 id="">Лишние символы</h3>
             <p>Не используются лишние (множественные) точки с запятой</p>
           </div>
         </article>
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Отладчик и консоль</h3>
+            <h3 id="">Отладчик и консоль</h3>
             <p>В коде не используется оставленных выводов в консоль</p>
 
             <p>В коде нет забытых инструкций <code>debugger</code></p>
@@ -417,7 +428,7 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Неиспользуемый код</h3>
+            <h3 id="">Неиспользуемый код</h3>
             <p>В проекте нет недоступного кода, который никогда не выполнится
 
 <pre class="language-js language-incorrect"><code>if (false) {
@@ -433,7 +444,7 @@ myFunc = 2;
 
             <p>В коде нет объявленных, но неиспользуемых переменных</p>
 
-            <p>В коде нет выражений, значения которых не записываются в переменные, параметры функций, свойства объектов и не передаются как параметры функций
+            <p>В коде нет выражений, значения которых не записываются в переменные, параметры функций или свойства объектов и не передаются как параметры функций
 
 <pre class="language-js language-incorrect"><code>check === true && doSomething();
 </code></pre>
@@ -448,7 +459,7 @@ myFunc = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Обработка ошибок и исключения</h3>
+            <h3 id="">Обработка ошибок и исключения</h3>
             <p>Для выбрасывания исключения в оператор <code>throw</code> передаются только объекты Error. Передавать литералы запрещено.
 
 <pre class="language-js language-incorrect"><code>throw 'Passed value is out of range';
@@ -503,7 +514,7 @@ var obj = Object.create(Parent.prototype);
 </code></pre>
             </p>
 
-            <p>В коде не используются лейблы. Лейблы используются с конструкциями <code>break</code> и <code>continue</code> для направленного выхода из икла и могут привести к слишком сложному для понимания коду</p>
+            <p>В коде не используются лейблы. Лейблы используются с конструкциями <code>break</code> и <code>continue</code> для направленного выхода из цикла и могут привести к слишком сложному для понимания коду</p>
 
             <p>Блоки, использующиеся в коде должны описывать тело функции, условия, оператора <code>switch</code> и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использваться сами по себе, любой блок должен быть частью другого выражения</p>
 
@@ -528,7 +539,7 @@ for (var i = 0, l = 100; i < l; i++);
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Регулярные выражения</h3>
+            <h3 id="">Регулярные выражения</h3>
             <p>В регулярных выражениях не используются «управляющие выражения»</p>
 
             <p>В регулярных выражениях не используются пустые классы символов <code>[]</code> (блоки, ограниченные квадратными скобками)</p>
@@ -551,7 +562,7 @@ for (var i = 0, l = 100; i < l; i++);
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Node.js</h3>
+            <h3 id="">Node.js</h3>
 
             <p>В Node.js файлах не используется конструкция <code>process.exit</code></p>
           </div>
