Исправляет класс у контрпримера кода на JS

--- a/javascript.html
+++ b/javascript.html
@@ -95,7 +95,7 @@ var longerName = 2;
 <pre class="language-js language-correct"><code>var foo = {a: 1};
 </code></pre>
 
-<pre class="language-js language-iccorrect"><code>const { a, b } = someObject;
+<pre class="language-js language-incorrect"><code>const { a, b } = someObject;
 </code></pre>
 
 <pre class="language-js language-correct"><code>const {a, b} = someObject;
