--- a/javascript.html
+++ b/javascript.html
@@ -78,7 +78,7 @@ var longerName = 2;
 
             <p>В однострочных блоках кода, код отделен от открывающей и закрывающей скобки пробелом</p>
 
-            <p>В однострочных массивах скобки не отделяются пробелами, первое значение идет непосредственно после закрывающей скобки, а закрывающая скобка идет непосредственно после последнего значения массива</p>
+            <p>В однострочных массивах скобки не отделяются пробелами, первое значение идет непосредственно после открывающей скобки, а закрывающая скобка идет непосредственно после последнего значения массива</p>
 
             <p>После запятой всегда должен ставиться пробел, если запятая не в конце строки</p>
 
@@ -121,7 +121,7 @@ var longerName = 2;
 
             <p>Перед скобками начинающими новый блок кода должен ставиться пробел</p>
 
-            <p>При объявлении анонимных функций, скобки с параметрами отделаются пробелом от ключевого слова <code>function</code>. Если функция именована, перед названием ставится пробел, после — нет</p>
+            <p>При объявлении анонимных функций, скобки с параметрами отделяются пробелом от ключевого слова <code>function</code>. Если функция именована, перед названием ставится пробел, после — нет</p>
 
             <p>В комментариях текст отбивается пробелом от начала комментария</p>
 
@@ -465,7 +465,7 @@ myFunc = 2;
 <pre class="language-js language-incorrect"><code>throw 'Passed value is out of range';
 </code></pre>
 
-<pre class="language-js language-correct"><code>throw new RangeError('Rassed value is out of range');
+<pre class="language-js language-correct"><code>throw new RangeError('Passed value is out of range');
 </code></pre></p>
 
             <p>В конструкции <code>try..catch</code> запрещен пустой блок <code>catch</code></p>
@@ -483,7 +483,7 @@ myFunc = 2;
 
             <p>необязательно добавлять текстовое описание конструкциям <code>@return</code> и <code>@param</code>, достаточно просто указания типа и названия параметра для <code>@param</code></p>
 
-            <p>описание возвращаемного типа <code>@return</code> требуется только в том случае, если функция возвращает какое-то значение. Правило не действует для конструкторов, для них указывать <code>@return</code> необязательно. Также необязательно указывать тег <code>@return</code> для функций, в которых конструкуия <code>return</code> используется без возвращаемого значения для выхода из функции</p>
+            <p>описание возвращаемного типа <code>@return</code> требуется только в том случае, если функция возвращает какое-то значение. Правило не действует для конструкторов, для них указывать <code>@return</code> необязательно. Также необязательно указывать тег <code>@return</code> для функций, в которых конструкция <code>return</code> используется без возвращаемого значения для выхода из функции</p>
 
             <p>для описания возвращаемого значения из функции используется тег <code>@return</code>, а не <code><del>@returns</del></code></p>
           </div>
@@ -518,7 +518,7 @@ var obj = Object.create(Parent.prototype);
 
             <p>Блоки, использующиеся в коде должны описывать тело функции, условия, оператора <code>switch</code> и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использваться сами по себе, любой блок должен быть частью другого выражения</p>
 
-            <p>В коде не используется оператор «запятая» для описания последовательностей действий. Для создания переменных используются отдельные ключевые слова <code>let</code>, <code>const</code>, <code>var</code>, в операторы группировки, условные операторы и прочие конструкции. Исключение составляет начальное условие оператора <code>for</code>
+            <p>В коде не используется оператор «запятая» для описания последовательностей действий. Для создания переменных используются отдельные ключевые слова <code>let</code>, <code>const</code>, <code>var</code>, операторы группировки, условные операторы и прочие конструкции. Исключение составляет начальное условие оператора <code>for</code>
 <pre class="language-js language-incorrect"><code>const result = (1, 2); // 2
 </code></pre>
 
