Исправляет ссылки в кодгайде

--- a/html-css.html
+++ b/html-css.html
@@ -72,7 +72,7 @@
               <li>Теги и&nbsp;их&nbsp;атрибуты пишутся строчными буквами. Для значений атрибутов всегда используются двойные кавычки.</li>
               <li>Необязательный закрывающий слеш у&nbsp;одиночных тегов (<code>&lt;img&gt;</code>, <code>&lt;br&gt;</code> и&nbsp;другие) не&nbsp;ставится.</li>
               <li>Необязательные закрывающие теги (например, <code>&lt;/li&gt;</code> или <code>&lt;/body&gt;</code>) не&nbsp;пропускаются.</li>
-              <li>Для проверки HTML-кода используйте файл конфигурации <a href="https://github.com/htmlacademy/codeguide/blob/master/.stylelintrc" target="_blank">.htmlhintrc</a> для настройки валидатора <a href="http://htmlhint.com" target="_blank">HTMLHint</a>.</li>
+              <li>Для проверки HTML-кода используйте файл конфигурации <a href="https://github.com/htmlacademy/codeguide/blob/master/.htmlhintrc" target="_blank">.htmlhintrc</a> для настройки валидатора <a href="http://htmlhint.com" target="_blank">HTMLHint</a>.</li>
             </ul>
           </div>
           <div class="chapter-part-col gray-bgcolor">
@@ -344,7 +344,7 @@
             </code></pre></li>
               <li>Закрывающая фигурная скобка пишется на&nbsp;новой строке и&nbsp;без отступа. Следующее после этого правило отделяется пустой строкой.</li>
               <li>Единицы измерения не&nbsp;пишутся, там где в&nbsp;них нет необходимости. Например, <code>border:&nbsp;0</code>.</li>
-              <li>Для проверки CSS-кода используйте файл конфигурации <a href="https://github.com/htmlacademy/codeguide/blob/master/.stylelintrc" target="_blank">.stylelintrc</a> для настройки валидатора <a href="http://stylelint.io" target="_blank">stylelint</a>.</li>
+              <li>Для проверки CSS-кода используйте <a href="https://github.com/htmlacademy/stylelint-config-htmlacademy" target="_blank">конфигурацию</a> для настройки валидатора <a href="http://stylelint.io" target="_blank">stylelint</a>.</li>
               <li>Для автоматического применения этих правил используйте файл конфигурации <a href="https://github.com/htmlacademy/codeguide/blob/master/csscomb.json" target="_blank">csscomb.json</a> для настройки <a href="http://csscomb.com" target="_blank">CSSComb</a>.</li>
             </ul>
           </div>
