Отделил основные блоки гайда классом

--- a/javascript.html
+++ b/javascript.html
@@ -39,7 +39,7 @@
       <p><a href="https://github.com/htmlacademy/codeguide">github.com/htmlacademy/codeguide</a></p>
     </header>
 
-    <main>
+    <main class="guide-content">
       <aside class="sidebar">
         <h2 class="visually-hidden">Оглавление</h2>
         <div class="sidebar-col sidebar-col-first">
