--- a/html-css.html
+++ b/html-css.html
@@ -31,7 +31,7 @@
       <p><a href="https://github.com/htmlacademy/codeguide">github.com/htmlacademy/codeguide</a></p>
     </header>
 
-    <main>
+    <main class="guide-content">
       <aside class="sidebar">
         <h2 class="visually-hidden">Оглавление</h2>
         <div class="sidebar-col sidebar-col-first">
