Сделал рефакторинг и объединил изменения

--- a/html-css.html
+++ b/html-css.html
@@ -16,9 +16,6 @@
     <link rel="stylesheet" href="css/prism.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- Временный css для пулл реквеста -->
-    <link rel="stylesheet" href="css/additions.css">
-
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-29640059-7','auto');ga('send','pageview');</script>
   </head>
   <body>
@@ -27,13 +24,14 @@
       <a href="https://htmlacademy.ru" target="_blank">
         <img class="logo" src="img/bane.svg" width="300" height="300" alt="HTML Academy" title="HTML Academy">
       </a>
-      <h1>Стиль кода Академии HTML</h1>
+      <h1><a href="index.html">Стиль кода Академии HTML</a></h1>
       <p><a href="https://github.com/htmlacademy/codeguide">github.com/htmlacademy/codeguide</a></p>
     </header>
 
     <main class="guide-content">
       <aside class="sidebar">
         <h2 class="visually-hidden">Оглавление</h2>
+
         <div class="sidebar-col sidebar-col-first">
           <a href="#html">HTML</a>
           <ul class="sidebar-menu">
@@ -50,6 +48,7 @@
             <li><a href="#html-language">Атрибут языка</a></li>
           </ul>
         </div>
+
         <div class="sidebar-col sidebar-col-last">
           <a href="#css">CSS</a>
           <ul class="sidebar-menu">
@@ -61,6 +60,7 @@
           </ul>
         </div>
       </aside>
+
       <div class="chapters">
 
         <section class="chapter">
@@ -571,11 +571,8 @@
     </footer>
 
     <script src="js/prism.js"></script>
-
-    <!-- Полифилл для position: sticky -->
     <script src="js/stickyfill.js"></script>
 
-    <!-- Инициализация полифилла -->
     <script>
       var sidebar = document.querySelector('.sidebar');
       Stickyfill.add(sidebar);
