Исправляет опечатку в кодгайде
https://app.clickup.com/t/1yeex1

--- a/javascript.html
+++ b/javascript.html
@@ -63,7 +63,7 @@ var longerName = 2;
 var longerName = 2;
 </code></pre>
 
-            <p>Открывающие скобки блоков кода находятся на одной строке с оператором, которых их использует:
+            <p>Открывающие скобки блоков кода находятся на одной строке с оператором, который их использует:
 <pre class="language-js language-incorrect"><code>if (condition)
 {
   // code
