--- a/javascript.html
+++ b/javascript.html
@@ -210,7 +210,7 @@ const bar = [
 
             <p>Запрещено называть переменные и свойства <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#Keywords" target="_blank">ключевыми словами JS</a></p>
 
-            <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта <code>window</code></p>
+            <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как к свойству объекта <code>window</code></p>
 
             <p>Запрещено напрямую обращаться к значению <code>undefined</code>. Для проверки типа рекомендуется использовать <code>typeof</code>. Исключение составляет явная передача <code>undefined</code> при вызове функции вместо аргумента, чтобы использовать значение параметра по умолчанию</p>
           </div>
