Исправляет опечатку в кодгайде

--- a/javascript.html
+++ b/javascript.html
@@ -200,7 +200,7 @@ var longerName = 2;
 
             <p>Запрещено называть переменные и свойства <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#Keywords" target="_blank">ключевыми словами JS</a></p>
 
-            <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта <code>window/global</code></p>
+            <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как к свойству объекта <code>window/global</code></p>
 
             <p>Запрещено объявлять переменные без значения</p>
 
