--- a/javascript.html
+++ b/javascript.html
@@ -107,7 +107,7 @@ var longerName = 2;
 
             <p>При объявлении вычисляемых ключей в объектах с помощью синтаксиса ES2016 в квадратных скобках не используются пробелы</p>
 
-            <p>Оператор вызова функции <code>()</code> не отделяется пробелами от названия функции</p>
+            <p>Оператор вызова функции <code>()</code> отделяется пробелом от названия функции</p>
 
             <p>В объектах после объявления ключа не ставится пробел. После двоеточия, которое отделяет в объектах ключ от значения может стоять только один пробел, выравнивать несколько значений при объявлении многострочного объекта запрещено</p>
 
