Fix__https://app.clickup.com/t/72q61q

--- a/javascript.html
+++ b/javascript.html
@@ -144,7 +144,7 @@ var longerName = 2;
 
             <p>При создании объектов через литералы свойства должны объявляться в едином стиле: или без кавычек или с ними</p>
 
-            <p>В строках используются одинарные кавычки. Разрешено использовать строковые шаблоны. Если позволяет поддержка, предпочтение отдается строковым шаблонам</p>
+            <p>В строках используются двойные кавычки. Разрешено использовать строковые шаблоны. Предпочтение отдается строковым шаблонам</p>
           </div>
         </article>
 
