Fix__https://app.clickup.com/t/72q6zy

--- a/javascript.html
+++ b/javascript.html
@@ -188,8 +188,6 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <p>Запрещено объявлять переменные, имена которых совпадают с именами используемых в коде лейблов</p>
-
             <p>Все переменные должны быть названы в верблюжьем регистре (camelCase). Исключения составляют константы которые должны именоваться прописными буквами в змеином регистре (UPPER_SNAKE_CASE)</p>
 
             <p>Запрещено использовать имена переменных, которые используются во внешних областях видимости</p>
@@ -311,8 +309,6 @@ var b = 2;
 myFunc = 2;
 </code></pre></p>
 
-            <p>Запрещено объявление значений внутри блоков</p>
-
             <p>Новые функции не создаются с помощью конструктора <code>Function</code></p>
 
             <p>Вместо коллекции <code>arguments</code>, используется rest-оператор, если это позволяет версия языка</p>
@@ -333,7 +329,7 @@ myFunc = 2;
 
             <p>При создании непустых объектов и массивов не используются «висячие» запятые</p>
 
-            <p>Не используются конструкторы примитивов, которые используются для автобоксинга <code>String</code>, <code>Number</code>, <code>Boolean</code></p>
+            <p>Для создания новых значений не используются конструкторы примитивов <code>String</code>, <code>Number</code>, <code>Boolean</code></p>
 
             <p>Конструкторы вызываются со скобками, даже если у них нет параметров</p>
 
