Fix__https://app.clickup.com/t/72q77e

--- a/javascript.html
+++ b/javascript.html
@@ -196,7 +196,7 @@ var longerName = 2;
 
             <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта <code>window/global</code></p>
 
-            <p>Запрещено напрямую обращаться к значению <code>undefined</code>. Для проверки типа рекомендуется использовать <code>typeof</code>. Для прямого сравнения с <code>undefined</code> можно использовать конструкцию <code>void 0</code></p>
+            <p>Запрещено напрямую обращаться к значению <code>undefined</code>. Для проверки типа рекомендуется использовать <code>typeof</code>. Исключение составляет явная передача <code>undefined</code> при вызове функции вместо аргумента, чтобы использовать значение параметра по умолчанию</p>
 
             <p>С заглавной буквы называются только функции-конструкторы</p>
           </div>
