Fix__https://app.clickup.com/t/72q7qw

--- a/javascript.html
+++ b/javascript.html
@@ -188,7 +188,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <p>Все переменные должны быть названы в верблюжьем регистре (camelCase). Исключения составляют константы которые должны именоваться прописными буквами в змеином регистре (UPPER_SNAKE_CASE)</p>
+            <p>Все переменные должны быть названы в верблюжьем регистре (camelCase). Исключения составляют константы которые должны именоваться прописными буквами в змеином регистре (UPPER_SNAKE_CASE); названия функций-конструкторов и перечислений, которые именуются с заглавной буквы (PascalCase)</p>
 
             <p>Запрещено использовать имена переменных, которые используются во внешних областях видимости</p>
 
@@ -197,8 +197,6 @@ var longerName = 2;
             <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта <code>window/global</code></p>
 
             <p>Запрещено напрямую обращаться к значению <code>undefined</code>. Для проверки типа рекомендуется использовать <code>typeof</code>. Исключение составляет явная передача <code>undefined</code> при вызове функции вместо аргумента, чтобы использовать значение параметра по умолчанию</p>
-
-            <p>С заглавной буквы называются только функции-конструкторы</p>
           </div>
         </article>
 
