Fix__https://app.clickup.com/t/72q8tw

--- a/javascript.html
+++ b/javascript.html
@@ -213,7 +213,7 @@ var longerName = 2;
 
             <p>В коде нет пустых блоков кода</p>
 
-            <p>Код работает в строгом режиме: в начале всех файлов явно прописана директива <code>'use strict'</code></p>
+            <p>Код работает в строгом режиме: в начале всех файлов явно прописана директива <code>'use strict'</code> или используются модули ECMAScript, которые по умолчанию работают в строгом режиме</p>
           </div>
         </article>
 
