--- a/javascript.html
+++ b/javascript.html
@@ -192,7 +192,7 @@ var longerName = 2;
 
             <p>Запрещено называть переменные и свойства <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#Keywords" target="_blank">ключевыми словами JS</a></p>
 
-            <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта <code>window/global</code></p>
+            <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости нужно обращаться к ней как в свойству объекта <code>window</code></p>
 
             <p>Запрещено напрямую обращаться к значению <code>undefined</code>. Для проверки типа рекомендуется использовать <code>typeof</code>. Исключение составляет явная передача <code>undefined</code> при вызове функции вместо аргумента, чтобы использовать значение параметра по умолчанию</p>
           </div>
@@ -515,14 +515,6 @@ for (var i = 0, l = 100; i < l; i++);
 <pre class="language-js language-correct"><code>/\s{3}/.exec(myString);
 </code></pre>
             </p>
-          </div>
-        </article>
-
-        <article class="chapter-part">
-          <div class="chapter-part-col chapter-part-col--full-width">
-            <h3>Node.js</h3>
-
-            <p>В Node.js файлах не используется конструкция <code>process.exit</code></p>
           </div>
         </article>
 
