https://app.clickup.com/t/72qgkt

--- a/javascript.html
+++ b/javascript.html
@@ -220,7 +220,7 @@ var longerName = 2;
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3>Условные операторы</h3>
-            <p>Запрещена «проверка Йоды» — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоброт.
+            <p>Запрещена «проверка Йоды» — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоборот.
 <pre class="language-js language-incorrect"><code>if (1 === myValue) { /*...*/ }
 </code></pre>
 
@@ -233,7 +233,7 @@ var longerName = 2;
 
             <p>В условиях не используется небезопасное отрицание, например использование <code>!</code> в <code>in</code> или <code>instanceof</code> без скобок</p>
 
-            <p>Запрещено сравнение с <code>NaN</code>. Для проверки, является результат операции числовым, нужно использовать <code><a href="https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Global_Objects/Number/isNaN" target="_blank">Number.isNaN</a></code></p>
+            <p>Запрещено сравнение с <code>NaN</code>. Для проверки, является ли результат операции числовым, нужно использовать <code><a href="https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Global_Objects/Number/isNaN" target="_blank">Number.isNaN</a></code></p>
 
             <p>Запрещено использовать <code>case</code> без <code>break</code> или <code>return</code> в блоках <code>switch</code></p>
 
@@ -474,7 +474,7 @@ var obj = Object.create(Parent.prototype);
 
             <p>В коде не используются лейблы. Лейблы используются с конструкциями <code>break</code> и <code>continue</code> для направленного выхода из цикла и могут привести к слишком сложному для понимания коду</p>
 
-            <p>Блоки, использующиеся в коде должны описывать тело функции, условия, оператора <code>switch</code> и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использваться сами по себе, любой блок должен быть частью другого выражения</p>
+            <p>Блоки, использующиеся в коде должны описывать тело функции, условия, оператора <code>switch</code> и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использоваться сами по себе, любой блок должен быть частью другого выражения</p>
 
             <p>В коде не используется оператор «запятая» для описания последовательностей действий. Для создания переменных используются отдельные ключевые слова <code>let</code>, <code>const</code>, <code>var</code>, операторы группировки, условные операторы и прочие конструкции. Исключение составляет начальное условие оператора <code>for</code>
 <pre class="language-js language-incorrect"><code>const result = (1, 2); // 2
