Fix__https://app.clickup.com/t/72q4tp

--- a/javascript.html
+++ b/javascript.html
@@ -80,7 +80,7 @@ var longerName = 2;
 
             <p>После запятой всегда должен ставиться пробел, если запятая не в конце строки</p>
 
-            <p>Запрещено переносить запятую на новую строку при объявлении массивов и объектов. Запрещено использовать запятую в конце списков, объектов или перечислений параметров функции</p>
+            <p>Обязательно переносить запятую на новую строку при объявлении массивов и объектов. Обязательно использовать запятую в конце списков, объектов или перечислений параметров функции</p>
 
             <p>Файл должен заканчиваться пустой строкой</p>
 
