Apply suggestions from code review

--- a/javascript.html
+++ b/javascript.html
@@ -81,6 +81,24 @@ var longerName = 2;
             <p>После запятой всегда должен ставиться пробел, если запятая не в конце строки</p>
 
             <p>Обязательно переносить запятую на новую строку при объявлении массивов и объектов. Обязательно использовать запятую в конце списков, объектов или перечислений параметров функции</p>
+            <pre class="language-js language-incorrect"><code>var foo = {
+    a: 1,
+    b: 2
+};
+
+var bar = [
+    1,
+    2
+];</code></pre>
+<pre class="language-js language-correct"><code>var foo = {
+    a: 1,
+    b: 2,
+};
+
+var bar = [
+    1,
+    2,
+];</code></pre>
 
             <p>Файл должен заканчиваться пустой строкой</p>
 
@@ -186,7 +204,7 @@ var longerName = 2;
 
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
-            <p>Все переменные должны быть названы в верблюжьем регистре (camelCase). Исключения составляют константы которые должны именоваться прописными буквами в змеином регистре (UPPER_SNAKE_CASE); названия функций-конструкторов и перечислений, которые именуются с заглавной буквы (PascalCase)</p>
+            <p>Все переменные должны быть названы в верблюжьем регистре (camelCase). Исключения составляют константы которые должны именоваться прописными буквами в константном регистре (CONSTANT_CASE) и названия классов, функций-конструкторов и перечислений, которые именуются с заглавной буквы (PascalCase)</p>
 
             <p>Запрещено использовать имена переменных, которые используются во внешних областях видимости</p>
 
@@ -213,7 +231,7 @@ var longerName = 2;
 
             <p>В коде нет пустых блоков кода</p>
 
-            <p>Код работает в строгом режиме: в начале всех файлов явно прописана директива <code>'use strict'</code> или используются модули ECMAScript, которые по умолчанию работают в строгом режиме</p>
+            <p>Код работает в строгом режиме: в начале всех файлов явно прописана директива <code>"use strict"</code> или используются модули ECMAScript, которые по умолчанию работают в строгом режиме</p>
           </div>
         </article>
 
