--- a/javascript.html
+++ b/javascript.html
@@ -53,12 +53,12 @@
             <p>Запрещено одновременное использование табов и пробелов для отступов</p>
 
             <p>Для отступов ключевых слов, операторов и т. д. используется не более одного пробела</p>
-<pre class="language-js language-incorrect"><code>var name       = 1;
-var longerName = 2;
+<pre class="language-js language-incorrect"><code>const name       = 1;
+const longerName = 2;
 </code></pre>
 
-<pre class="language-js language-correct"><code>var name = 1;
-var longerName = 2;
+<pre class="language-js language-correct"><code>const name = 1;
+const longerName = 2;
 </code></pre>
 
             <p>Открывающие скобки блоков кода находятся на одной строке с оператором, который их использует:
@@ -81,21 +81,21 @@ var longerName = 2;
             <p>После запятой всегда должен ставиться пробел, если запятая не в конце строки</p>
 
             <p>Обязательно переносить запятую на новую строку при объявлении массивов и объектов. Обязательно использовать запятую в конце списков, объектов или перечислений параметров функции</p>
-            <pre class="language-js language-incorrect"><code>var foo = {
+            <pre class="language-js language-incorrect"><code>const foo = {
     a: 1,
     b: 2
 };
 
-var bar = [
+const bar = [
     1,
     2
 ];</code></pre>
-<pre class="language-js language-correct"><code>var foo = {
+<pre class="language-js language-correct"><code>const foo = {
     a: 1,
     b: 2,
 };
 
-var bar = [
+const bar = [
     1,
     2,
 ];</code></pre>
@@ -105,10 +105,10 @@ var bar = [
             <p>Строка не должна заканчиваться пробелами</p>
 
             <p>В однострочных объектах и при деструктуризации фигурные скобки не отделяются пробелами от содержимого</p>
-<pre class="language-js language-incorrect"><code>var foo = { a: 1 };
+<pre class="language-js language-incorrect"><code>const foo = { a: 1 };
 </code></pre>
 
-<pre class="language-js language-correct"><code>var foo = {a: 1};
+<pre class="language-js language-correct"><code>const foo = {a: 1};
 </code></pre>
 
 <pre class="language-js language-incorrect"><code>const { a, b } = someObject;
@@ -151,10 +151,10 @@ var bar = [
             <p>В строках, объявленных с помощью одинарных и двойных кавычек запрещено использовать переносы</p>
 
             <p>В строках запрещено указывать код спецсимволов в восьмеричной системе счисления
-<pre class="language-js language-incorrect"><code>var foo = "Copyright \251";
+<pre class="language-js language-incorrect"><code>const foo = "Copyright \251";
 </code></pre>
 
-<pre class="language-js language-correct"><code>var foo = "Copyright \u00A9";
+<pre class="language-js language-correct"><code>const foo = "Copyright \u00A9";
 </code></pre>
             </p>
 
@@ -262,9 +262,9 @@ var bar = [
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3>Функции</h3>
-            <p>Если в функции используется ветвление, в котором есть возврат значения (<code>return</code>), <code>return</code> должен быть добавлен и в остальных ветках.</p>
+            <p>Если в функции используется ветвление, в котором есть возврат значения, то <code>return</code> должен быть добавлен и в остальных ветках.</p>
 
-<pre class="language-js language-incorrect"><code>var doThings = function() {
+<pre class="language-js language-incorrect"><code>const doThings = function() {
   if (cond) {
     return 1;
   } else {
@@ -273,16 +273,28 @@ var bar = [
 };
 </code></pre>
 
-<pre class="language-js language-correct"><code>var doThings = function() {
+<pre class="language-js language-correct"><code>const doThings = function() {
   if (cond) {
     return 1;
   } else {
-    return 2;
+    return doSomethingElse();
   }
 };
 </code></pre>
 
             <p>Это правило предотвращает создание функций, при использовании которых непонятно, вернут ли они какое-то значение. В первом примере, функция <code>do</code> может вернуть значение <code>1</code>, а может <code>undefined</code></p>
+
+            <p>Единственное исключение — использование <code>return</code> без значения для прекращения работы функции:</p>
+
+<pre class="language-js language-correct"><code>const doThings = function() {
+  if (cond) {
+    doSomething()
+    return;
+  }
+
+  doSomethingElse();
+};
+</code></pre>
 
             <p>В <code>return</code> не используется оператор присваивания</p>
 
@@ -302,16 +314,16 @@ var bar = [
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3>Объявление переменных и функций</h3>
-            <p>При объявлении переменных предпочтение отдается ключевым словам <code>let</code> и <code>const</code>. Переменные объявляются через <code>var</code> только при наличии проблем с поддержкой ES6</p>
+            <p>При объявлении переменных предпочтение отдается ключевым словам <code>let</code> и <code>const</code>. Переменные объявляются через <code>var</code> только при наличии проблем с поддержкой ECMAScript 2015</p>
 
             <p>Запрещено переопределять с помощью ключевого слова ранее созданные переменные</p>
 
             <p>Запрещено использовать множественное объявление через одно ключевое слово. Для каждой переменной используется отдельный <code>var</code>, <code>let</code> или <code>const</code>.
-<pre class="language-js language-incorrect"><code>var a = 1, b = 2;
+<pre class="language-js language-incorrect"><code>const a = 1, b = 2;
 </code></pre>
 
-<pre class="language-js language-correct"><code>var a = 1;
-var b = 2;
+<pre class="language-js language-correct"><code>const a = 1;
+const b = 2;
 </code></pre>
             </p>
 
@@ -325,7 +337,7 @@ myFunc = 2;
 
             <p>Вместо коллекции <code>arguments</code>, используется rest-оператор, если это позволяет версия языка</p>
 
-            <p>Вместо вызова функции через <code>apply</code> используется spread-оператор, если это позволяет версия языка
+            <p>Для превращения массива с данными в аргументы вместо вызова функции через <code>apply</code> используется spread-оператор, если это позволяет версия языка
 
 <pre class="language-js language-incorrect"><code>Math.max.apply(null, [1, 100, 15, 1000]);
 </code></pre>
@@ -400,10 +412,10 @@ myFunc = 2;
 <pre class="language-js language-correct"><code>if (a > 1) {}
 </code></pre>
 
-<pre class="language-js language-incorrect"><code>var ternaryValue = true ? 'a' : 'b';
+<pre class="language-js language-incorrect"><code>const ternaryValue = true ? 'a' : 'b';
 </code></pre>
 
-<pre class="language-js language-correct"><code>var ternaryValue = isA() ? 'a' : 'b';
+<pre class="language-js language-correct"><code>const ternaryValue = isA() ? 'a' : 'b';
 </code></pre>
             </p>
           </div>
@@ -477,16 +489,16 @@ myFunc = 2;
             <p>В объектах напрямую не переопределяется свойство <code>__iterator__</code></p>
 
             <p>В объектах напрямую не переопределяется свойство <code>__proto__</code>. Разрешено переопределять <code>__proto__</code> через <code>Object.create</code> или запись в прототип, объектов, созданных другими конструкторами, но напрямую редактировать <code>__proto__</code> нельзя
-<pre class="language-js language-incorrect"><code>var obj = {
+<pre class="language-js language-incorrect"><code>const obj = {
   __proto__: Parent
 };
 </code></pre>
 
-<pre class="language-js language-correct"><code>var Obj = function() {};
+<pre class="language-js language-correct"><code>const Obj = function() {};
 Obj.prototype = new Parent();
-var obj = new obj;
+const obj = new obj;
 
-var obj = Object.create(Parent.prototype);
+const obj = Object.create(Parent.prototype);
 </code></pre>
             </p>
 
@@ -507,7 +519,7 @@ var obj = Object.create(Parent.prototype);
 <pre class="language-js language-correct"><code>val = getVal();
 switch(val) {}
 
-for (var i = 0, l = 100; i < l; i++);
+for (let i = 0, l = 100; i < l; i++);
 </code></pre>
             </p>
           </div>
