--- a/javascript.html
+++ b/javascript.html
@@ -61,7 +61,7 @@ const longerName = 2;
 const longerName = 2;
 </code></pre>
 
-            <p>Открывающие скобки блоков кода находятся на одной строке с оператором, который их использует:
+            <p>Открывающие скобки блоков кода находятся на одной строке с оператором, который их использует:</p>
 <pre class="language-js language-incorrect"><code>if (condition)
 {
   // code
@@ -72,8 +72,6 @@ const longerName = 2;
   // code
 }
 </code></pre>
-            </p>
-
             <p>В однострочных блоках кода, код отделен от открывающей и закрывающей скобки пробелом</p>
 
             <p>В однострочных массивах скобки не отделяются пробелами, первое значение идет непосредственно после открывающей скобки, а закрывающая скобка идет непосредственно после последнего значения массива</p>
@@ -150,13 +148,12 @@ const bar = [
             <h3>Строки</h3>
             <p>В строках, объявленных с помощью одинарных и двойных кавычек запрещено использовать переносы</p>
 
-            <p>В строках запрещено указывать код спецсимволов в восьмеричной системе счисления
+            <p>В строках запрещено указывать код спецсимволов в восьмеричной системе счисления</p>
 <pre class="language-js language-incorrect"><code>const foo = "Copyright \251";
 </code></pre>
 
 <pre class="language-js language-correct"><code>const foo = "Copyright \u00A9";
 </code></pre>
-            </p>
 
             <p>При создании объектов через литералы свойства должны объявляться в едином стиле: или без кавычек или с ними</p>
 
@@ -238,13 +235,12 @@ const bar = [
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3>Условные операторы</h3>
-            <p>Запрещена «проверка Йоды» — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоборот.
+            <p>Запрещена «проверка Йоды» — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоборот.</p>
 <pre class="language-js language-incorrect"><code>if (1 === myValue) { /*...*/ }
 </code></pre>
 
 <pre class="language-js language-correct"><code>if (myValue === 1) { /*...*/ }
-</code></pre></p>
-
+</code></pre>
             <p>При сравнении двух значений используется оператор строгого сравнения вместо оператора нестрогого сравнения</p>
 
             <p>В условных операторах не используется оператор присвоения</p>
@@ -318,33 +314,29 @@ const bar = [
 
             <p>Запрещено переопределять с помощью ключевого слова ранее созданные переменные</p>
 
-            <p>Запрещено использовать множественное объявление через одно ключевое слово. Для каждой переменной используется отдельный <code>var</code>, <code>let</code> или <code>const</code>.
+            <p>Запрещено использовать множественное объявление через одно ключевое слово. Для каждой переменной используется отдельный <code>var</code>, <code>let</code> или <code>const</code>.</p>
 <pre class="language-js language-incorrect"><code>const a = 1, b = 2;
 </code></pre>
 
 <pre class="language-js language-correct"><code>const a = 1;
 const b = 2;
 </code></pre>
-            </p>
-
             <h4>Объявление функций</h4>
-            <p>Запрещено переопределение функций, созданных с помощью функционального объявления (function declaration)
+            <p>Запрещено переопределение функций, созданных с помощью функционального объявления (function declaration)</p>
 <pre class="language-js language-incorrect"><code>function myFunc() {};
 myFunc = 2;
-</code></pre></p>
+</code></pre>
 
             <p>Новые функции не создаются с помощью конструктора <code>Function</code></p>
 
             <p>Вместо коллекции <code>arguments</code>, используется rest-оператор, если это позволяет версия языка</p>
 
-            <p>Для превращения массива с данными в аргументы вместо вызова функции через <code>apply</code> используется spread-оператор, если это позволяет версия языка
-
+            <p>Для превращения массива с данными в аргументы вместо вызова функции через <code>apply</code> используется spread-оператор, если это позволяет версия языка</p>
 <pre class="language-js language-incorrect"><code>Math.max.apply(null, [1, 100, 15, 1000]);
 </code></pre>
 
 <pre class="language-js language-correct"><code>Math.max(...[1, 100, 15, 1000]);
 </code></pre>
-            </p>
 
             <h4>Создание значений</h4>
             <p>Не вызываются служебные конструкторы, создающие объекты из глобальной области видимости <code>Math()</code>, <code>JSON()</code>, <code>Reflect()</code></p>
@@ -405,7 +397,7 @@ myFunc = 2;
 
             <h4>Константы в условиях</h4>
 
-            <p>В блоки условия операторов <code>if</code>, <code>while</code>, <code>for</code> и тернарного оператора не передается константное значение, которое подразумевает, что условие выполняется (или не выполняется) всегда
+            <p>В блоки условия операторов <code>if</code>, <code>while</code>, <code>for</code> и тернарного оператора не передается константное значение, которое подразумевает, что условие выполняется (или не выполняется) всегда</p>
 <pre class="language-js language-incorrect"><code>if (true) {}
 </code></pre>
 
@@ -417,7 +409,6 @@ myFunc = 2;
 
 <pre class="language-js language-correct"><code>const ternaryValue = isA() ? 'a' : 'b';
 </code></pre>
-            </p>
           </div>
         </article>
 
@@ -445,8 +436,7 @@ myFunc = 2;
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3>Неиспользуемый код</h3>
-            <p>В проекте нет недоступного кода, который никогда не выполнится
-
+            <p>В проекте нет недоступного кода, который никогда не выполнится</p>
 <pre class="language-js language-incorrect"><code>if (false) {
   doSomething();
 }
@@ -456,7 +446,6 @@ myFunc = 2;
   doSomething();
 }
 </code></pre>
-            </p>
 
             <p>В коде нет объявленных, но неиспользуемых переменных</p>
           </div>
@@ -465,13 +454,12 @@ myFunc = 2;
         <article class="chapter-part">
           <div class="chapter-part-col chapter-part-col--full-width">
             <h3>Обработка ошибок и исключения</h3>
-            <p>Для выбрасывания исключения в оператор <code>throw</code> передаются только объекты Error. Передавать литералы запрещено.
-
+            <p>Для выбрасывания исключения в оператор <code>throw</code> передаются только объекты Error. Передавать литералы запрещено.</p>
 <pre class="language-js language-incorrect"><code>throw 'Passed value is out of range';
 </code></pre>
 
 <pre class="language-js language-correct"><code>throw new RangeError('Passed value is out of range');
-</code></pre></p>
+</code></pre>
 
             <p>В конструкции <code>try..catch</code> запрещен пустой блок <code>catch</code></p>
           </div>
@@ -488,7 +476,7 @@ myFunc = 2;
 
             <p>В объектах напрямую не переопределяется свойство <code>__iterator__</code></p>
 
-            <p>В объектах напрямую не переопределяется свойство <code>__proto__</code>. Разрешено переопределять <code>__proto__</code> через <code>Object.create</code> или запись в прототип, объектов, созданных другими конструкторами, но напрямую редактировать <code>__proto__</code> нельзя
+            <p>В объектах напрямую не переопределяется свойство <code>__proto__</code>. Разрешено переопределять <code>__proto__</code> через <code>Object.create</code> или запись в прототип, объектов, созданных другими конструкторами, но напрямую редактировать <code>__proto__</code> нельзя</p>
 <pre class="language-js language-incorrect"><code>const obj = {
   __proto__: Parent
 };
@@ -500,13 +488,12 @@ const obj = new obj;
 
 const obj = Object.create(Parent.prototype);
 </code></pre>
-            </p>
 
             <p>В коде не используются лейблы. Лейблы используются с конструкциями <code>break</code> и <code>continue</code> для направленного выхода из цикла и могут привести к слишком сложному для понимания коду</p>
 
             <p>Блоки, использующиеся в коде должны описывать тело функции, условия, оператора <code>switch</code> и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использоваться сами по себе, любой блок должен быть частью другого выражения</p>
 
-            <p>В коде не используется оператор «запятая» для описания последовательностей действий. Для создания переменных используются отдельные ключевые слова <code>let</code>, <code>const</code>, <code>var</code>, операторы группировки, условные операторы и прочие конструкции. Исключение составляет начальное условие оператора <code>for</code>
+            <p>В коде не используется оператор «запятая» для описания последовательностей действий. Для создания переменных используются отдельные ключевые слова <code>let</code>, <code>const</code>, <code>var</code>, операторы группировки, условные операторы и прочие конструкции. Исключение составляет начальное условие оператора <code>for</code></p>
 <pre class="language-js language-incorrect"><code>const result = (1, 2); // 2
 </code></pre>
 
@@ -521,7 +508,6 @@ switch(val) {}
 
 for (let i = 0, l = 100; i < l; i++);
 </code></pre>
-            </p>
           </div>
         </article>
 
@@ -534,8 +520,7 @@ for (let i = 0, l = 100; i < l; i++);
 
             <p>В коде регулярные выражения не создаются через конструктор <code>RegExp</code> из строки, которая не может быть разобрана как правильное регулярное выражение</p>
 
-            <p>В регулярных выражениях не используются нескольких последовательных пробелов. Вместо этого предлагается использовать модификаторы количества
-
+            <p>В регулярных выражениях не используются нескольких последовательных пробелов. Вместо этого предлагается использовать модификаторы количества</p>
 <pre class="language-js language-incorrect"><code>/   /.exec(myString);
 </code></pre>
 
@@ -544,7 +529,6 @@ for (let i = 0, l = 100; i < l; i++);
 
 <pre class="language-js language-correct"><code>/\s{3}/.exec(myString);
 </code></pre>
-            </p>
           </div>
         </article>
 
